# GR-K-GDSS

./: .gitignore  CMakeLists.txt  Makefile  README.md  kgdss_multiburst_design.docx
docs/: GLOSSARY.md  GNUPG_ECDH_KDF_EXAMPLES.md  GR-K-GDSS-for-Dummies.md  KEYSTREAM_CONTRACT.md  LINHT_INTEGRATION.md  TESTING.md  TEST_RESULTS.md  USAGE.md  noise-baseline.md  plots_table.csv  todo.md
examples/: VERIFICATION_REPORT.md  loopback_kgdss_linht.grc  loopback_kgdss_linht.py  rx_kgdss_linht.grc  rx_kgdss_linht.py  tx_example_kgdss.grc  tx_example_kgdss.py  tx_kgdss_linht.grc  tx_kgdss_linht.py  verify_tx_example_kgdss.py
gnuradio4/: .gitignore  CMakeLists.txt
gnuradio4/cmake/: gnuradio4-gr-k-gdss.pc.in  gr-k-gdss4-config.cmake.in
gnuradio4/include/gnuradio-4.0/: kgdss.hpp
gnuradio4/include/gnuradio-4.0/kgdss/: KgdssDespreaderCc.hpp  KgdssSpreaderCc.hpp  LinhtPttSource.hpp
gnuradio4/include/gnuradio-4.0/kgdss/detail/: ChachaKeystreamHelper.hpp  DespreaderEngine.hpp  Helpers.hpp  SpreaderEngine.hpp
gnuradio4/python/kgdss/: key_injector.py  p372_baseline_config.json  session_key_derivation.py
gnuradio4/test/: CMakeLists.txt  qa_ChachaKeystreamHelper.cpp  qa_KgdssDespreaderCc.cpp  qa_KgdssSpreaderCc.cpp  qa_LinhtPttSource.cpp
grc/: CMakeLists.txt  kgdss_despreader_cc.block.yml  kgdss_key_injector.block.yml  kgdss_spreader_cc.block.yml
include/gnuradio/kgdss/: CMakeLists.txt  api.h  kgdss_despreader_cc.h  kgdss_spreader_cc.h
lib/: CMakeLists.txt  chacha_ietf_keystream.h  kgdss_despreader_cc_impl.cc  kgdss_despreader_cc_impl.h  kgdss_spreader_cc_impl.cc  kgdss_spreader_cc_impl.h
paper/: README.md  ber_simulation.py  gen_figures.py  kgdss_paper.tex
paper/figures/: ber_mc_results.npz
python/: CMakeLists.txt  __init__.py  key_injector.py  linht_bridge.py  p372_baseline.py  p372_receiver_profile.py  session_key_derivation.py  sync_burst_utils.py
python/bindings/: CMakeLists.txt  kgdss_despreader_cc_python.cc  kgdss_python.cc  kgdss_spreader_cc_python.cc
tests/: CMakeLists.txt  README.md  analyse_iq_files.py  channel_sim.py  check_keyring_import.py  conftest.py  generate_iq_test_files.py  plot_iq_comparison.py  plot_spectrum_snapshots.py  run_tests.sh  test_cross_layer.py  test_galdralag_kgdss_compat.py  test_gr_linux_crypto_hkdf_compat.py  test_matched_sequences.py  test_p372_receiver_profile.py  test_t1_spreader_despreader.py  test_t2_channel_models.py  test_t2_sync_burst.py  test_t3_key_derivation.py  test_t4_counter_overflow.py  test_t5_pedestrian_b_timing.py
tests/cpp/: CMakeLists.txt  chacha_oracle.hpp  hex_util.hpp  test_chacha_keystream.cpp  test_spreader_work_stats.cpp  test_vectors.h
tests/cpp/data/: wycheproof_chacha20_poly1305_subset.json
tests/iq_files/: 08_real_noise_placeholder_README.txt
